--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -24,6 +24,15 @@ body.home-page
 				.featured-grid-column
 				.featured-grid-column
 				.featured-grid-item 
+					a.featured-content(href="https://www.jove.com/video/59592/translational-brain-mapping-at-university-rochester-medical-center")
+						.featured-thumbnail-wrapper
+							.video-block
+								.video-thumbnail(style="background-image:url(_img/jive_urmc.jpg)")
+									.icon-youtube-wrapper
+										+icon("video")
+						.featured-meta
+							h2 Translational Brain Mapping at URMC: Preserving the Mind Through Personalized Brain Mapping
+				.featured-grid-item 
 					a.featured-content(href="/brainsurvey")
 						.featured-thumbnail-wrapper
 							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
@@ -35,9 +44,7 @@ body.home-page
 						.featured-thumbnail-wrapper
 							img(src="_img/tbi_1.png", width="800", height="600", alt="Screenshot of interactive model of traumatic brain injury in football players")
 						.featured-meta
-							h2 
-								.new-featured-content New
-								| How football affects the brain
+							h2 How football affects the brain
 							p New research documents a type of brain damage that can occur in football players in the absence of concussion
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
