--- a/src/jade/experiment-exchange/index.jade
+++ b/src/jade/experiment-exchange/index.jade
@@ -10,8 +10,30 @@ body.discover-page.experiment-exchange-page
 	section.page-hero
 			.container
 				h1 Experiment Exchange
-				p Coming soon to the Open Brain Project. <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here
+				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here
 	main.page-content
 		section
 			.container
+				table
+					thead
+						tr
+							td Title:
+							td Dataset for: Reorganized language network connectivity after left arcuate fasciculus resection: A case study
+					tbody
+						tr
+							td URL:
+							td 
+								a(href="https://openbrainproject.org/experiment-exchange/ChernoffColleagues_Cortex2019 https://rochester.app.box.com/s/ce0m21jqqftqhlg44iyadyq7tq9nmvi8") https://openbrainproject.org/experiment-exchange/ChernoffColleagues_Cortex2019
+						tr
+							td First Author:
+							td 
+								div Benjamin L. Chernoff
+								div Carnegie Mellon University
+								div Baker Hall, 4909 Frew St, Pittsburgh, PA 15213
+						tr
+							td Corresponding Author:
+							td 
+								div Braford Z. Mahon
+								div Carnegie Mellon University
+								div Baker Hall, 4909 Frew St, Pittsburgh, PA 15213
 	+footer()
