--- a/src/jade/experiment-exchange/index.jade
+++ b/src/jade/experiment-exchange/index.jade
@@ -23,7 +23,7 @@ body.discover-page.experiment-exchange-page
 						tr
 							td URL:
 							td 
-								a(href="https://openbrainproject.org/experiment-exchange/ChernoffColleagues_Cortex2019 https://rochester.app.box.com/s/ce0m21jqqftqhlg44iyadyq7tq9nmvi8") https://openbrainproject.org/experiment-exchange/ChernoffColleagues_Cortex2019
+								a(href="https://openbrainproject.org/experiment-exchange/ChernoffColleagues_Cortex2019") https://openbrainproject.org/experiment-exchange/ChernoffColleagues_Cortex2019
 						tr
 							td First Author:
 							td 
