--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -23,6 +23,7 @@ body.media-page
 				details
 					summary Show more
 					:marked
+						* [The Guardian: Rob Gronkowski was dangerously wrong when he says CTE is 'fixable'](https://www.theguardian.com/sport/2019/sep/26/rob-gronkowski-was-dangerously-wrong-when-he-says-cte-is-fixable)
 						* [U.S. News &amp; World Report: Sub-Concussive Hits Cause Minor Brain Damage in College Athletes](https://www.usnews.com/news/healthiest-communities/articles/2019-08-07/study-sub-concussive-hits-cause-minor-brain-damage-in-college-athletes)
 						* [DailyMail: Stop focusing on concussions: Any head hits to football players can severely damage the brain and lead to CTE— whether they are concussed or not, study finds](https://www.dailymail.co.uk/health/article-7334101/ANY-head-hits-football-players-severely-damage-brain-concussed-not.html)
 						* [MEAWW: Concussion not the only problem in football: New study shows that even routine hits can cause structural damage to brain](https://meaww.com/football-head-trauma-concussion-not-big-ones-routine-football-hits-game-brain-damage)
