adding second opinion piece

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -24,6 +24,22 @@ body.home-page
 				.featured-grid-column
 				.featured-grid-column
 				.featured-grid-item 
+					a.featured-content(href="https://www.youtube.com/watch?v=NGf85QsJDcU&feature=youtu.be")
+						.featured-thumbnail-wrapper
+							.video-block
+								.video-thumbnail(style="background-image:url(_img/second_opinion.jpg)")
+									.icon-youtube-wrapper
+										+icon("youtube")
+						.featured-meta
+							h2 University of Rochester Neurosurgery highlighted by Second Opinion
+				.featured-grid-item 
+					a.featured-content(href="/brainsurvey")
+						.featured-thumbnail-wrapper
+							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
+						.featured-meta
+							h2 Brain Survey
+							p Explore a 3D model of the human brain
+				.featured-grid-item 
 					a.featured-content(href="https://www.jove.com/video/59592/translational-brain-mapping-at-university-rochester-medical-center")
 						.featured-thumbnail-wrapper
 							.video-block
@@ -32,13 +48,6 @@ body.home-page
 										+icon("video")
 						.featured-meta
 							h2 Translational Brain Mapping at URMC: Preserving the Mind Through Personalized Brain Mapping
-				.featured-grid-item 
-					a.featured-content(href="/brainsurvey")
-						.featured-thumbnail-wrapper
-							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
-						.featured-meta
-							h2 Brain Survey
-							p Explore a 3D model of the human brain
 				.featured-grid-item
 					a.featured-content(href="/how-football-affects-the-brain")
 						.featured-thumbnail-wrapper
