new wired link + fix typo on experiments exchange page

--- a/src/jade/experiment-exchange/index.jade
+++ b/src/jade/experiment-exchange/index.jade
@@ -33,7 +33,7 @@ body.discover-page.experiment-exchange-page
 						tr
 							td Corresponding Author:
 							td 
-								div Braford Z. Mahon
+								div Bradford Z. Mahon
 								div Carnegie Mellon University
 								div Baker Hall, 4909 Frew St, Pittsburgh, PA 15213
 	+footer()
