--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -17,6 +17,7 @@ body.media-page
 			.container
 				h3 New research documents a type of brain damage that can occur in football players in the absence of concussion
 				:marked
+					* [Wired: The NFL's Helmet Tests Are Brainless](https://www.wired.com/story/the-nfls-helmet-tests-are-brainless/)
 					* [The New York Times: Football May Take a Toll on the Brain, Even Without Concussions](https://www.nytimes.com/2019/08/14/well/move/football-may-take-a-toll-on-the-brain-even-without-concussions.html)
 					* [ScienceMag: Just one season of playing football—even without a concussion—can cause brain damage](https://www.sciencemag.org/news/2019/08/just-one-season-playing-football-even-without-concussion-can-cause-brain-damage)
 					* [Science Friday: Diving Headfirst Into Football Season With A New Look At Concussion Research](https://www.sciencefriday.com/segments/diving-headfirst-into-football-season-with-a-new-look-at-concussion-research/)
