--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -24,6 +24,13 @@ body.home-page
 				.featured-grid-column
 				.featured-grid-column
 				.featured-grid-item 
+					a.featured-content(href="https://www.wired.com/story/the-nfls-helmet-tests-are-brainless/")
+						.featured-thumbnail-wrapper
+							img(src="_img/wired.jpg", width="800", height="600", alt="Photo for Wired article")
+						.featured-meta
+							h2 The NFL's Helmet Tests Are Brainless
+							p Current testing on helmets ignores the kinds of impacts that cause most of the concussions. It’s time for football to wise up.
+				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=NGf85QsJDcU&feature=youtu.be")
 						.featured-thumbnail-wrapper
 							.video-block
