add upload audio page

--- a/src/jade/_partials/_nav.jade
+++ b/src/jade/_partials/_nav.jade
@@ -33,6 +33,9 @@ mixin nav()
 								li.nav-item
 									a.nav-link(href="/experiment-exchange") 
 										span Experiment Exchange
+								li.nav-item
+									a.nav-link(href="/upload-audio") 
+										span Upload Audio
 						li.nav-item.nav-group.translate-group(tabindex=0)
 							.nav-link.main-nav-link
 								span Translate
